parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    CREATE
    VIEW

Grammar

Rule 0     S' -> statement
Rule 1     script -> statement statement
Rule 2     script -> statement
Rule 3     statement -> create_view
Rule 4     statement -> create_table
Rule 5     statement -> select
Rule 6     create_table -> CREATE_TABLE expr_identifier expr_parent
Rule 7     create_view -> CREATE_VIEW expr_as
Rule 8     select -> select clause
Rule 9     select -> clause
Rule 10    analytic_function -> analytic_function clause
Rule 11    analytic_function -> clause_partition_by
Rule 12    clause_partition_by -> PARTITION_BY expr
Rule 13    clause -> clause_with
Rule 14    clause -> clause_select
Rule 15    clause -> clause_from
Rule 16    clause -> clause_join
Rule 17    clause -> clause_where
Rule 18    clause -> clause_group_by
Rule 19    clause -> clause_having
Rule 20    clause -> clause_order_by
Rule 21    clause_with -> WITH expr_comma
Rule 22    clause_select -> SELECT expr_select_modifier expr_comma
Rule 23    clause_from -> FROM expr_comma
Rule 24    clause_join -> JOIN_OPERATOR expr ON expr
Rule 25    clause_join -> JOIN_OPERATOR expr USING expr_parent
Rule 26    clause_where -> WHERE expr
Rule 27    clause_group_by -> GROUP_BY expr_comma
Rule 28    clause_having -> HAVING expr
Rule 29    clause_order_by -> ORDER_BY expr_comma
Rule 30    expr_select_modifier -> empty
Rule 31    expr_select_modifier -> DISTINCT
Rule 32    expr_select_modifier -> UNIQUE
Rule 33    expr_select_modifier -> ALL
Rule 34    expr_alias -> expr expr_identifier
Rule 35    expr_alias -> expr expr_function
Rule 36    expr_as -> expr AS expr
Rule 37    expr_as -> expr AS expr_identifier
Rule 38    expr_case -> CASE expr_conditions END
Rule 39    expr_conditions -> expr_conditions WHEN expr
Rule 40    expr_conditions -> expr_conditions THEN expr
Rule 41    expr_conditions -> expr_conditions ELSE expr
Rule 42    expr_conditions -> WHEN expr
Rule 43    expr_conditions -> THEN expr
Rule 44    expr_conditions -> ELSE expr
Rule 45    expr_function -> expr_identifier expr_parent
Rule 46    expr_function -> CAST expr_parent
Rule 47    expr_parent -> PARENT_L expr_comma PARENT_R
Rule 48    expr_parent -> PARENT_L empty PARENT_R
Rule 49    expr_comma -> expr_comma COMMA expr
Rule 50    expr_comma -> expr
Rule 51    expr_binary -> expr OPERATOR expr
Rule 52    expr_binary -> expr PLUS_MINUS expr
Rule 53    expr_binary -> expr SET_OPERATOR expr
Rule 54    expr_binary -> expr AND expr
Rule 55    expr_binary -> expr OR expr
Rule 56    expr_binary -> expr STAR expr
Rule 57    expr_between -> expr BETWEEN expr
Rule 58    expr_order -> expr ASC
Rule 59    expr_order -> expr DESC
Rule 60    expr_plus_minus -> PLUS_MINUS expr
Rule 61    expr_not -> NOT expr
Rule 62    expr_identifier -> expr_identifier DOT IDENTIFIER
Rule 63    expr_identifier -> expr_identifier DOT STAR
Rule 64    expr_identifier -> IDENTIFIER
Rule 65    expr_identifier -> STAR
Rule 66    expr -> select
Rule 67    expr -> expr_case
Rule 68    expr -> expr_function
Rule 69    expr -> expr_parent
Rule 70    expr -> expr_binary
Rule 71    expr -> expr_alias
Rule 72    expr -> expr_as
Rule 73    expr -> expr_order
Rule 74    expr -> expr_plus_minus
Rule 75    expr -> expr_not
Rule 76    expr -> expr_between
Rule 77    expr -> expr_identifier
Rule 78    expr -> term_literal
Rule 79    expr -> analytic_function
Rule 80    term_literal -> NUMBER
Rule 81    term_literal -> STRING
Rule 82    term_literal -> NULL
Rule 83    empty -> <empty>

Terminals, with rules where they appear

ALL                  : 33
AND                  : 54
AS                   : 36 37
ASC                  : 58
BETWEEN              : 57
CASE                 : 38
CAST                 : 46
COMMA                : 49
CREATE               : 
CREATE_TABLE         : 6
CREATE_VIEW          : 7
DESC                 : 59
DISTINCT             : 31
DOT                  : 62 63
ELSE                 : 41 44
END                  : 38
FROM                 : 23
GROUP_BY             : 27
HAVING               : 28
IDENTIFIER           : 62 64
JOIN_OPERATOR        : 24 25
NOT                  : 61
NULL                 : 82
NUMBER               : 80
ON                   : 24
OPERATOR             : 51
OR                   : 55
ORDER_BY             : 29
PARENT_L             : 47 48
PARENT_R             : 47 48
PARTITION_BY         : 12
PLUS_MINUS           : 52 60
SELECT               : 22
SET_OPERATOR         : 53
STAR                 : 56 63 65
STRING               : 81
THEN                 : 40 43
UNIQUE               : 32
USING                : 25
VIEW                 : 
WHEN                 : 39 42
WHERE                : 26
WITH                 : 21
error                : 

Nonterminals, with rules where they appear

analytic_function    : 10 79
clause               : 8 9 10
clause_from          : 15
clause_group_by      : 18
clause_having        : 19
clause_join          : 16
clause_order_by      : 20
clause_partition_by  : 11
clause_select        : 14
clause_where         : 17
clause_with          : 13
create_table         : 4
create_view          : 3
empty                : 30 48
expr                 : 12 24 24 25 26 28 34 35 36 36 37 39 40 41 42 43 44 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 61
expr_alias           : 71
expr_as              : 7 72
expr_between         : 76
expr_binary          : 70
expr_case            : 67
expr_comma           : 21 22 23 27 29 47 49
expr_conditions      : 38 39 40 41
expr_function        : 35 68
expr_identifier      : 6 34 37 45 62 63 77
expr_not             : 75
expr_order           : 73
expr_parent          : 6 25 45 46 69
expr_plus_minus      : 74
expr_select_modifier : 22
script               : 
select               : 5 8 66
statement            : 1 1 2 0
term_literal         : 78

Parsing method: LALR

state 0

    (0) S' -> . statement
    (3) statement -> . create_view
    (4) statement -> . create_table
    (5) statement -> . select
    (7) create_view -> . CREATE_VIEW expr_as
    (6) create_table -> . CREATE_TABLE expr_identifier expr_parent
    (8) select -> . select clause
    (9) select -> . clause
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
    (16) clause -> . clause_join
    (17) clause -> . clause_where
    (18) clause -> . clause_group_by
    (19) clause -> . clause_having
    (20) clause -> . clause_order_by
    (21) clause_with -> . WITH expr_comma
    (22) clause_select -> . SELECT expr_select_modifier expr_comma
    (23) clause_from -> . FROM expr_comma
    (24) clause_join -> . JOIN_OPERATOR expr ON expr
    (25) clause_join -> . JOIN_OPERATOR expr USING expr_parent
    (26) clause_where -> . WHERE expr
    (27) clause_group_by -> . GROUP_BY expr_comma
    (28) clause_having -> . HAVING expr
    (29) clause_order_by -> . ORDER_BY expr_comma

    CREATE_VIEW     shift and go to state 11
    CREATE_TABLE    shift and go to state 23
    WITH            shift and go to state 8
    SELECT          shift and go to state 9
    FROM            shift and go to state 19
    JOIN_OPERATOR   shift and go to state 2
    WHERE           shift and go to state 10
    GROUP_BY        shift and go to state 21
    HAVING          shift and go to state 22
    ORDER_BY        shift and go to state 7

    clause_having                  shift and go to state 15
    clause_group_by                shift and go to state 16
    clause_join                    shift and go to state 3
    clause                         shift and go to state 1
    clause_from                    shift and go to state 14
    clause_where                   shift and go to state 5
    create_table                   shift and go to state 12
    statement                      shift and go to state 13
    clause_select                  shift and go to state 17
    create_view                    shift and go to state 20
    clause_with                    shift and go to state 18
    select                         shift and go to state 4
    clause_order_by                shift and go to state 6

state 1

    (9) select -> clause .

    WITH            reduce using rule 9 (select -> clause .)
    SELECT          reduce using rule 9 (select -> clause .)
    FROM            reduce using rule 9 (select -> clause .)
    JOIN_OPERATOR   reduce using rule 9 (select -> clause .)
    WHERE           reduce using rule 9 (select -> clause .)
    GROUP_BY        reduce using rule 9 (select -> clause .)
    HAVING          reduce using rule 9 (select -> clause .)
    ORDER_BY        reduce using rule 9 (select -> clause .)
    OPERATOR        reduce using rule 9 (select -> clause .)
    PLUS_MINUS      reduce using rule 9 (select -> clause .)
    SET_OPERATOR    reduce using rule 9 (select -> clause .)
    AND             reduce using rule 9 (select -> clause .)
    OR              reduce using rule 9 (select -> clause .)
    STAR            reduce using rule 9 (select -> clause .)
    AS              reduce using rule 9 (select -> clause .)
    ASC             reduce using rule 9 (select -> clause .)
    DESC            reduce using rule 9 (select -> clause .)
    BETWEEN         reduce using rule 9 (select -> clause .)
    IDENTIFIER      reduce using rule 9 (select -> clause .)
    CAST            reduce using rule 9 (select -> clause .)
    END             reduce using rule 9 (select -> clause .)
    WHEN            reduce using rule 9 (select -> clause .)
    THEN            reduce using rule 9 (select -> clause .)
    ELSE            reduce using rule 9 (select -> clause .)
    COMMA           reduce using rule 9 (select -> clause .)
    $end            reduce using rule 9 (select -> clause .)
    ON              reduce using rule 9 (select -> clause .)
    USING           reduce using rule 9 (select -> clause .)
    PARENT_R        reduce using rule 9 (select -> clause .)


state 2

    (24) clause_join -> JOIN_OPERATOR . expr ON expr
    (25) clause_join -> JOIN_OPERATOR . expr USING expr_parent
    (66) expr -> . select
    (67) expr -> . expr_case
    (68) expr -> . expr_function
    (69) expr -> . expr_parent
    (70) expr -> . expr_binary
    (71) expr -> . expr_alias
    (72) expr -> . expr_as
    (73) expr -> . expr_order
    (74) expr -> . expr_plus_minus
    (75) expr -> . expr_not
    (76) expr -> . expr_between
    (77) expr -> . expr_identifier
    (78) expr -> . term_literal
    (79) expr -> . analytic_function
    (8) select -> . select clause
    (9) select -> . clause
    (38) expr_case -> . CASE expr_conditions END
    (45) expr_function -> . expr_identifier expr_parent
    (46) expr_function -> . CAST expr_parent
    (47) expr_parent -> . PARENT_L expr_comma PARENT_R
    (48) expr_parent -> . PARENT_L empty PARENT_R
    (51) expr_binary -> . expr OPERATOR expr
    (52) expr_binary -> . expr PLUS_MINUS expr
    (53) expr_binary -> . expr SET_OPERATOR expr
    (54) expr_binary -> . expr AND expr
    (55) expr_binary -> . expr OR expr
    (56) expr_binary -> . expr STAR expr
    (34) expr_alias -> . expr expr_identifier
    (35) expr_alias -> . expr expr_function
    (36) expr_as -> . expr AS expr
    (37) expr_as -> . expr AS expr_identifier
    (58) expr_order -> . expr ASC
    (59) expr_order -> . expr DESC
    (60) expr_plus_minus -> . PLUS_MINUS expr
    (61) expr_not -> . NOT expr
    (57) expr_between -> . expr BETWEEN expr
    (62) expr_identifier -> . expr_identifier DOT IDENTIFIER
    (63) expr_identifier -> . expr_identifier DOT STAR
    (64) expr_identifier -> . IDENTIFIER
    (65) expr_identifier -> . STAR
    (80) term_literal -> . NUMBER
    (81) term_literal -> . STRING
    (82) term_literal -> . NULL
    (10) analytic_function -> . analytic_function clause
    (11) analytic_function -> . clause_partition_by
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
    (16) clause -> . clause_join
    (17) clause -> . clause_where
    (18) clause -> . clause_group_by
    (19) clause -> . clause_having
    (20) clause -> . clause_order_by
    (12) clause_partition_by -> . PARTITION_BY expr
    (21) clause_with -> . WITH expr_comma
    (22) clause_select -> . SELECT expr_select_modifier expr_comma
    (23) clause_from -> . FROM expr_comma
    (24) clause_join -> . JOIN_OPERATOR expr ON expr
    (25) clause_join -> . JOIN_OPERATOR expr USING expr_parent
    (26) clause_where -> . WHERE expr
    (27) clause_group_by -> . GROUP_BY expr_comma
    (28) clause_having -> . HAVING expr
    (29) clause_order_by -> . ORDER_BY expr_comma

    CASE            shift and go to state 31
    CAST            shift and go to state 35
    PARENT_L        shift and go to state 44
    PLUS_MINUS      shift and go to state 41
    NOT             shift and go to state 49
    IDENTIFIER      shift and go to state 36
    STAR            shift and go to state 24
    NUMBER          shift and go to state 40
    STRING          shift and go to state 38
    NULL            shift and go to state 28
    PARTITION_BY    shift and go to state 39
    WITH            shift and go to state 8
    SELECT          shift and go to state 9
    FROM            shift and go to state 19
    JOIN_OPERATOR   shift and go to state 2
    WHERE           shift and go to state 10
    GROUP_BY        shift and go to state 21
    HAVING          shift and go to state 22
    ORDER_BY        shift and go to state 7

    clause_group_by                shift and go to state 16
    clause                         shift and go to state 1
    clause_having                  shift and go to state 15
    expr_function                  shift and go to state 25
    expr_as                        shift and go to state 26
    clause_where                   shift and go to state 5
    clause_order_by                shift and go to state 6
    expr_between                   shift and go to state 37
    expr_plus_minus                shift and go to state 29
    select                         shift and go to state 30
    expr_parent                    shift and go to state 32
    expr_not                       shift and go to state 33
    analytic_function              shift and go to state 34
    clause_from                    shift and go to state 14
    expr_binary                    shift and go to state 27
    clause_join                    shift and go to state 3
    expr_case                      shift and go to state 42
    expr_alias                     shift and go to state 43
    clause_select                  shift and go to state 17
    expr_order                     shift and go to state 45
    clause_with                    shift and go to state 18
    expr_identifier                shift and go to state 46
    expr                           shift and go to state 47
    term_literal                   shift and go to state 48
    clause_partition_by            shift and go to state 50

state 3

    (16) clause -> clause_join .

    COMMA           reduce using rule 16 (clause -> clause_join .)
    WITH            reduce using rule 16 (clause -> clause_join .)
    SELECT          reduce using rule 16 (clause -> clause_join .)
    FROM            reduce using rule 16 (clause -> clause_join .)
    JOIN_OPERATOR   reduce using rule 16 (clause -> clause_join .)
    WHERE           reduce using rule 16 (clause -> clause_join .)
    GROUP_BY        reduce using rule 16 (clause -> clause_join .)
    HAVING          reduce using rule 16 (clause -> clause_join .)
    ORDER_BY        reduce using rule 16 (clause -> clause_join .)
    $end            reduce using rule 16 (clause -> clause_join .)
    ON              reduce using rule 16 (clause -> clause_join .)
    USING           reduce using rule 16 (clause -> clause_join .)
    OPERATOR        reduce using rule 16 (clause -> clause_join .)
    PLUS_MINUS      reduce using rule 16 (clause -> clause_join .)
    SET_OPERATOR    reduce using rule 16 (clause -> clause_join .)
    AND             reduce using rule 16 (clause -> clause_join .)
    OR              reduce using rule 16 (clause -> clause_join .)
    STAR            reduce using rule 16 (clause -> clause_join .)
    AS              reduce using rule 16 (clause -> clause_join .)
    ASC             reduce using rule 16 (clause -> clause_join .)
    DESC            reduce using rule 16 (clause -> clause_join .)
    BETWEEN         reduce using rule 16 (clause -> clause_join .)
    IDENTIFIER      reduce using rule 16 (clause -> clause_join .)
    CAST            reduce using rule 16 (clause -> clause_join .)
    PARENT_R        reduce using rule 16 (clause -> clause_join .)
    END             reduce using rule 16 (clause -> clause_join .)
    WHEN            reduce using rule 16 (clause -> clause_join .)
    THEN            reduce using rule 16 (clause -> clause_join .)
    ELSE            reduce using rule 16 (clause -> clause_join .)


state 4

    (5) statement -> select .
    (8) select -> select . clause
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
    (16) clause -> . clause_join
    (17) clause -> . clause_where
    (18) clause -> . clause_group_by
    (19) clause -> . clause_having
    (20) clause -> . clause_order_by
    (21) clause_with -> . WITH expr_comma
    (22) clause_select -> . SELECT expr_select_modifier expr_comma
    (23) clause_from -> . FROM expr_comma
    (24) clause_join -> . JOIN_OPERATOR expr ON expr
    (25) clause_join -> . JOIN_OPERATOR expr USING expr_parent
    (26) clause_where -> . WHERE expr
    (27) clause_group_by -> . GROUP_BY expr_comma
    (28) clause_having -> . HAVING expr
    (29) clause_order_by -> . ORDER_BY expr_comma

    $end            reduce using rule 5 (statement -> select .)
    WITH            shift and go to state 8
    SELECT          shift and go to state 9
    FROM            shift and go to state 19
    JOIN_OPERATOR   shift and go to state 2
    WHERE           shift and go to state 10
    GROUP_BY        shift and go to state 21
    HAVING          shift and go to state 22
    ORDER_BY        shift and go to state 7

    clause_having                  shift and go to state 15
    clause                         shift and go to state 51
    clause_join                    shift and go to state 3
    clause_with                    shift and go to state 18
    clause_where                   shift and go to state 5
    clause_order_by                shift and go to state 6
    clause_group_by                shift and go to state 16
    clause_select                  shift and go to state 17
    clause_from                    shift and go to state 14

state 5

    (17) clause -> clause_where .

    COMMA           reduce using rule 17 (clause -> clause_where .)
    WITH            reduce using rule 17 (clause -> clause_where .)
    SELECT          reduce using rule 17 (clause -> clause_where .)
    FROM            reduce using rule 17 (clause -> clause_where .)
    JOIN_OPERATOR   reduce using rule 17 (clause -> clause_where .)
    WHERE           reduce using rule 17 (clause -> clause_where .)
    GROUP_BY        reduce using rule 17 (clause -> clause_where .)
    HAVING          reduce using rule 17 (clause -> clause_where .)
    ORDER_BY        reduce using rule 17 (clause -> clause_where .)
    $end            reduce using rule 17 (clause -> clause_where .)
    ON              reduce using rule 17 (clause -> clause_where .)
    USING           reduce using rule 17 (clause -> clause_where .)
    OPERATOR        reduce using rule 17 (clause -> clause_where .)
    PLUS_MINUS      reduce using rule 17 (clause -> clause_where .)
    SET_OPERATOR    reduce using rule 17 (clause -> clause_where .)
    AND             reduce using rule 17 (clause -> clause_where .)
    OR              reduce using rule 17 (clause -> clause_where .)
    STAR            reduce using rule 17 (clause -> clause_where .)
    AS              reduce using rule 17 (clause -> clause_where .)
    ASC             reduce using rule 17 (clause -> clause_where .)
    DESC            reduce using rule 17 (clause -> clause_where .)
    BETWEEN         reduce using rule 17 (clause -> clause_where .)
    IDENTIFIER      reduce using rule 17 (clause -> clause_where .)
    CAST            reduce using rule 17 (clause -> clause_where .)
    PARENT_R        reduce using rule 17 (clause -> clause_where .)
    END             reduce using rule 17 (clause -> clause_where .)
    WHEN            reduce using rule 17 (clause -> clause_where .)
    THEN            reduce using rule 17 (clause -> clause_where .)
    ELSE            reduce using rule 17 (clause -> clause_where .)


state 6

    (20) clause -> clause_order_by .

    COMMA           reduce using rule 20 (clause -> clause_order_by .)
    WITH            reduce using rule 20 (clause -> clause_order_by .)
    SELECT          reduce using rule 20 (clause -> clause_order_by .)
    FROM            reduce using rule 20 (clause -> clause_order_by .)
    JOIN_OPERATOR   reduce using rule 20 (clause -> clause_order_by .)
    WHERE           reduce using rule 20 (clause -> clause_order_by .)
    GROUP_BY        reduce using rule 20 (clause -> clause_order_by .)
    HAVING          reduce using rule 20 (clause -> clause_order_by .)
    ORDER_BY        reduce using rule 20 (clause -> clause_order_by .)
    $end            reduce using rule 20 (clause -> clause_order_by .)
    ON              reduce using rule 20 (clause -> clause_order_by .)
    USING           reduce using rule 20 (clause -> clause_order_by .)
    OPERATOR        reduce using rule 20 (clause -> clause_order_by .)
    PLUS_MINUS      reduce using rule 20 (clause -> clause_order_by .)
    SET_OPERATOR    reduce using rule 20 (clause -> clause_order_by .)
    AND             reduce using rule 20 (clause -> clause_order_by .)
    OR              reduce using rule 20 (clause -> clause_order_by .)
    STAR            reduce using rule 20 (clause -> clause_order_by .)
    AS              reduce using rule 20 (clause -> clause_order_by .)
    ASC             reduce using rule 20 (clause -> clause_order_by .)
    DESC            reduce using rule 20 (clause -> clause_order_by .)
    BETWEEN         reduce using rule 20 (clause -> clause_order_by .)
    IDENTIFIER      reduce using rule 20 (clause -> clause_order_by .)
    CAST            reduce using rule 20 (clause -> clause_order_by .)
    PARENT_R        reduce using rule 20 (clause -> clause_order_by .)
    END             reduce using rule 20 (clause -> clause_order_by .)
    WHEN            reduce using rule 20 (clause -> clause_order_by .)
    THEN            reduce using rule 20 (clause -> clause_order_by .)
    ELSE            reduce using rule 20 (clause -> clause_order_by .)


state 7

    (29) clause_order_by -> ORDER_BY . expr_comma
    (49) expr_comma -> . expr_comma COMMA expr
    (50) expr_comma -> . expr
    (66) expr -> . select
    (67) expr -> . expr_case
    (68) expr -> . expr_function
    (69) expr -> . expr_parent
    (70) expr -> . expr_binary
    (71) expr -> . expr_alias
    (72) expr -> . expr_as
    (73) expr -> . expr_order
    (74) expr -> . expr_plus_minus
    (75) expr -> . expr_not
    (76) expr -> . expr_between
    (77) expr -> . expr_identifier
    (78) expr -> . term_literal
    (79) expr -> . analytic_function
    (8) select -> . select clause
    (9) select -> . clause
    (38) expr_case -> . CASE expr_conditions END
    (45) expr_function -> . expr_identifier expr_parent
    (46) expr_function -> . CAST expr_parent
    (47) expr_parent -> . PARENT_L expr_comma PARENT_R
    (48) expr_parent -> . PARENT_L empty PARENT_R
    (51) expr_binary -> . expr OPERATOR expr
    (52) expr_binary -> . expr PLUS_MINUS expr
    (53) expr_binary -> . expr SET_OPERATOR expr
    (54) expr_binary -> . expr AND expr
    (55) expr_binary -> . expr OR expr
    (56) expr_binary -> . expr STAR expr
    (34) expr_alias -> . expr expr_identifier
    (35) expr_alias -> . expr expr_function
    (36) expr_as -> . expr AS expr
    (37) expr_as -> . expr AS expr_identifier
    (58) expr_order -> . expr ASC
    (59) expr_order -> . expr DESC
    (60) expr_plus_minus -> . PLUS_MINUS expr
    (61) expr_not -> . NOT expr
    (57) expr_between -> . expr BETWEEN expr
    (62) expr_identifier -> . expr_identifier DOT IDENTIFIER
    (63) expr_identifier -> . expr_identifier DOT STAR
    (64) expr_identifier -> . IDENTIFIER
    (65) expr_identifier -> . STAR
    (80) term_literal -> . NUMBER
    (81) term_literal -> . STRING
    (82) term_literal -> . NULL
    (10) analytic_function -> . analytic_function clause
    (11) analytic_function -> . clause_partition_by
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
    (16) clause -> . clause_join
    (17) clause -> . clause_where
    (18) clause -> . clause_group_by
    (19) clause -> . clause_having
    (20) clause -> . clause_order_by
    (12) clause_partition_by -> . PARTITION_BY expr
    (21) clause_with -> . WITH expr_comma
    (22) clause_select -> . SELECT expr_select_modifier expr_comma
    (23) clause_from -> . FROM expr_comma
    (24) clause_join -> . JOIN_OPERATOR expr ON expr
    (25) clause_join -> . JOIN_OPERATOR expr USING expr_parent
    (26) clause_where -> . WHERE expr
    (27) clause_group_by -> . GROUP_BY expr_comma
    (28) clause_having -> . HAVING expr
    (29) clause_order_by -> . ORDER_BY expr_comma

    CASE            shift and go to state 31
    CAST            shift and go to state 35
    PARENT_L        shift and go to state 44
    PLUS_MINUS      shift and go to state 41
    NOT             shift and go to state 49
    IDENTIFIER      shift and go to state 36
    STAR            shift and go to state 24
    NUMBER          shift and go to state 40
    STRING          shift and go to state 38
    NULL            shift and go to state 28
    PARTITION_BY    shift and go to state 39
    WITH            shift and go to state 8
    SELECT          shift and go to state 9
    FROM            shift and go to state 19
    JOIN_OPERATOR   shift and go to state 2
    WHERE           shift and go to state 10
    GROUP_BY        shift and go to state 21
    HAVING          shift and go to state 22
    ORDER_BY        shift and go to state 7

    clause_group_by                shift and go to state 16
    clause                         shift and go to state 1
    clause_having                  shift and go to state 15
    expr_function                  shift and go to state 25
    expr_as                        shift and go to state 26
    clause_where                   shift and go to state 5
    clause_order_by                shift and go to state 6
    expr_between                   shift and go to state 37
    expr_plus_minus                shift and go to state 29
    select                         shift and go to state 30
    expr_parent                    shift and go to state 32
    expr_not                       shift and go to state 33
    analytic_function              shift and go to state 34
    clause_from                    shift and go to state 14
    expr_binary                    shift and go to state 27
    clause_join                    shift and go to state 3
    expr_case                      shift and go to state 42
    expr_alias                     shift and go to state 43
    clause_select                  shift and go to state 17
    expr_order                     shift and go to state 45
    clause_with                    shift and go to state 18
    expr_comma                     shift and go to state 52
    expr_identifier                shift and go to state 46
    expr                           shift and go to state 53
    term_literal                   shift and go to state 48
    clause_partition_by            shift and go to state 50

state 8

    (21) clause_with -> WITH . expr_comma
    (49) expr_comma -> . expr_comma COMMA expr
    (50) expr_comma -> . expr
    (66) expr -> . select
    (67) expr -> . expr_case
    (68) expr -> . expr_function
    (69) expr -> . expr_parent
    (70) expr -> . expr_binary
    (71) expr -> . expr_alias
    (72) expr -> . expr_as
    (73) expr -> . expr_order
    (74) expr -> . expr_plus_minus
    (75) expr -> . expr_not
    (76) expr -> . expr_between
    (77) expr -> . expr_identifier
    (78) expr -> . term_literal
    (79) expr -> . analytic_function
    (8) select -> . select clause
    (9) select -> . clause
    (38) expr_case -> . CASE expr_conditions END
    (45) expr_function -> . expr_identifier expr_parent
    (46) expr_function -> . CAST expr_parent
    (47) expr_parent -> . PARENT_L expr_comma PARENT_R
    (48) expr_parent -> . PARENT_L empty PARENT_R
    (51) expr_binary -> . expr OPERATOR expr
    (52) expr_binary -> . expr PLUS_MINUS expr
    (53) expr_binary -> . expr SET_OPERATOR expr
    (54) expr_binary -> . expr AND expr
    (55) expr_binary -> . expr OR expr
    (56) expr_binary -> . expr STAR expr
    (34) expr_alias -> . expr expr_identifier
    (35) expr_alias -> . expr expr_function
    (36) expr_as -> . expr AS expr
    (37) expr_as -> . expr AS expr_identifier
    (58) expr_order -> . expr ASC
    (59) expr_order -> . expr DESC
    (60) expr_plus_minus -> . PLUS_MINUS expr
    (61) expr_not -> . NOT expr
    (57) expr_between -> . expr BETWEEN expr
    (62) expr_identifier -> . expr_identifier DOT IDENTIFIER
    (63) expr_identifier -> . expr_identifier DOT STAR
    (64) expr_identifier -> . IDENTIFIER
    (65) expr_identifier -> . STAR
    (80) term_literal -> . NUMBER
    (81) term_literal -> . STRING
    (82) term_literal -> . NULL
    (10) analytic_function -> . analytic_function clause
    (11) analytic_function -> . clause_partition_by
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
    (16) clause -> . clause_join
    (17) clause -> . clause_where
    (18) clause -> . clause_group_by
    (19) clause -> . clause_having
    (20) clause -> . clause_order_by
    (12) clause_partition_by -> . PARTITION_BY expr
    (21) clause_with -> . WITH expr_comma
    (22) clause_select -> . SELECT expr_select_modifier expr_comma
    (23) clause_from -> . FROM expr_comma
    (24) clause_join -> . JOIN_OPERATOR expr ON expr
    (25) clause_join -> . JOIN_OPERATOR expr USING expr_parent
    (26) clause_where -> . WHERE expr
    (27) clause_group_by -> . GROUP_BY expr_comma
    (28) clause_having -> . HAVING expr
    (29) clause_order_by -> . ORDER_BY expr_comma

    CASE            shift and go to state 31
    CAST            shift and go to state 35
    PARENT_L        shift and go to state 44
    PLUS_MINUS      shift and go to state 41
    NOT             shift and go to state 49
    IDENTIFIER      shift and go to state 36
    STAR            shift and go to state 24
    NUMBER          shift and go to state 40
    STRING          shift and go to state 38
    NULL            shift and go to state 28
    PARTITION_BY    shift and go to state 39
    WITH            shift and go to state 8
    SELECT          shift and go to state 9
    FROM            shift and go to state 19
    JOIN_OPERATOR   shift and go to state 2
    WHERE           shift and go to state 10
    GROUP_BY        shift and go to state 21
    HAVING          shift and go to state 22
    ORDER_BY        shift and go to state 7

    clause_group_by                shift and go to state 16
    clause                         shift and go to state 1
    clause_having                  shift and go to state 15
    expr_function                  shift and go to state 25
    expr_as                        shift and go to state 26
    clause_where                   shift and go to state 5
    clause_order_by                shift and go to state 6
    expr_between                   shift and go to state 37
    expr_plus_minus                shift and go to state 29
    select                         shift and go to state 30
    expr_parent                    shift and go to state 32
    expr_not                       shift and go to state 33
    analytic_function              shift and go to state 34
    clause_from                    shift and go to state 14
    expr_binary                    shift and go to state 27
    clause_join                    shift and go to state 3
    expr_case                      shift and go to state 42
    expr_alias                     shift and go to state 43
    clause_select                  shift and go to state 17
    expr_order                     shift and go to state 45
    clause_with                    shift and go to state 18
    expr_comma                     shift and go to state 54
    expr_identifier                shift and go to state 46
    expr                           shift and go to state 53
    term_literal                   shift and go to state 48
    clause_partition_by            shift and go to state 50

state 9

    (22) clause_select -> SELECT . expr_select_modifier expr_comma
    (30) expr_select_modifier -> . empty
    (31) expr_select_modifier -> . DISTINCT
    (32) expr_select_modifier -> . UNIQUE
    (33) expr_select_modifier -> . ALL
    (83) empty -> .

    DISTINCT        shift and go to state 56
    UNIQUE          shift and go to state 57
    ALL             shift and go to state 55
    CASE            reduce using rule 83 (empty -> .)
    CAST            reduce using rule 83 (empty -> .)
    PARENT_L        reduce using rule 83 (empty -> .)
    PLUS_MINUS      reduce using rule 83 (empty -> .)
    NOT             reduce using rule 83 (empty -> .)
    IDENTIFIER      reduce using rule 83 (empty -> .)
    STAR            reduce using rule 83 (empty -> .)
    NUMBER          reduce using rule 83 (empty -> .)
    STRING          reduce using rule 83 (empty -> .)
    NULL            reduce using rule 83 (empty -> .)
    PARTITION_BY    reduce using rule 83 (empty -> .)
    WITH            reduce using rule 83 (empty -> .)
    SELECT          reduce using rule 83 (empty -> .)
    FROM            reduce using rule 83 (empty -> .)
    JOIN_OPERATOR   reduce using rule 83 (empty -> .)
    WHERE           reduce using rule 83 (empty -> .)
    GROUP_BY        reduce using rule 83 (empty -> .)
    HAVING          reduce using rule 83 (empty -> .)
    ORDER_BY        reduce using rule 83 (empty -> .)

    expr_select_modifier           shift and go to state 58
    empty                          shift and go to state 59

state 10

    (26) clause_where -> WHERE . expr
    (66) expr -> . select
    (67) expr -> . expr_case
    (68) expr -> . expr_function
    (69) expr -> . expr_parent
    (70) expr -> . expr_binary
    (71) expr -> . expr_alias
    (72) expr -> . expr_as
    (73) expr -> . expr_order
    (74) expr -> . expr_plus_minus
    (75) expr -> . expr_not
    (76) expr -> . expr_between
    (77) expr -> . expr_identifier
    (78) expr -> . term_literal
    (79) expr -> . analytic_function
    (8) select -> . select clause
    (9) select -> . clause
    (38) expr_case -> . CASE expr_conditions END
    (45) expr_function -> . expr_identifier expr_parent
    (46) expr_function -> . CAST expr_parent
    (47) expr_parent -> . PARENT_L expr_comma PARENT_R
    (48) expr_parent -> . PARENT_L empty PARENT_R
    (51) expr_binary -> . expr OPERATOR expr
    (52) expr_binary -> . expr PLUS_MINUS expr
    (53) expr_binary -> . expr SET_OPERATOR expr
    (54) expr_binary -> . expr AND expr
    (55) expr_binary -> . expr OR expr
    (56) expr_binary -> . expr STAR expr
    (34) expr_alias -> . expr expr_identifier
    (35) expr_alias -> . expr expr_function
    (36) expr_as -> . expr AS expr
    (37) expr_as -> . expr AS expr_identifier
    (58) expr_order -> . expr ASC
    (59) expr_order -> . expr DESC
    (60) expr_plus_minus -> . PLUS_MINUS expr
    (61) expr_not -> . NOT expr
    (57) expr_between -> . expr BETWEEN expr
    (62) expr_identifier -> . expr_identifier DOT IDENTIFIER
    (63) expr_identifier -> . expr_identifier DOT STAR
    (64) expr_identifier -> . IDENTIFIER
    (65) expr_identifier -> . STAR
    (80) term_literal -> . NUMBER
    (81) term_literal -> . STRING
    (82) term_literal -> . NULL
    (10) analytic_function -> . analytic_function clause
    (11) analytic_function -> . clause_partition_by
    (13) clause -> . clause_with
    (14) clause -> . clause_select
    (15) clause -> . clause_from
